# antsdr

./: .gitignore  .gitmodules  README.md  pyvenv.cfg  requirements.txt
antsdre200/: antsdre200.xpr  mem_init_sys.txt  webtalk.jou
antsdre200/antsdre200.cache/wt/: gui_handlers.wdf  java_command_handlers.wdf  webtalk_pa.xml
antsdre200/antsdre200.hw/hw_1/: hw.xml
antsdre200/antsdre200.runs/.jobs/: vrs_config_1.xml  vrs_config_2.xml
antsdre200/antsdre200.runs/gen_clks_synth_1/: .vivado.begin.rst  dont_touch.xdc  gen_clks.dcp  gen_clks.tcl  gen_clks.vds  gen_clks_utilization_synth.pb  gen_clks_utilization_synth.rpt  gen_run.xml  htr.txt  rundef.js  runme.sh  vivado.jou  vivado.pb
antsdre200/antsdre200.runs/impl_1/: .vivado.begin.rst  .write_bitstream.begin.rst  gen_run.xml  init_design.pb  opt_design.pb  phys_opt_design.pb  place_design.pb  project.wdf  route_design.pb  rundef.js  runme.sh  system_top.hwdef  system_top.tcl  system_top.vdi  system_top_bus_skew_routed.rpt  system_top_bus_skew_routed.rpx  system_top_clock_utilization_routed.rpt  system_top_control_sets_placed.rpt  system_top_drc_opted.rpt  system_top_drc_opted.rpx  system_top_drc_routed.pb  system_top_drc_routed.rpt  system_top_drc_routed.rpx  system_top_io_placed.rpt  system_top_methodology_drc_routed.rpt  system_top_methodology_drc_routed.rpx  system_top_power_routed.rpt  system_top_power_summary_routed.pb  system_top_route_status.pb  system_top_route_status.rpt  system_top_timing_summary_routed.pb  system_top_timing_summary_routed.rpt  system_top_timing_summary_routed.rpx  system_top_utilization_placed.pb  system_top_utilization_placed.rpt  usage_statistics_webtalk.html  usage_statistics_webtalk.xml  vivado.jou  vivado.pb  write_bitstream.pb
antsdre200/antsdre200.runs/synth_1/: .vivado.begin.rst  dont_touch.xdc  gen_run.xml  runme.sh  system_top.dcp  system_top.tcl  system_top.vds  system_top_utilization_synth.pb  system_top_utilization_synth.rpt  vivado.jou  vivado.pb
antsdre200/antsdre200.runs/system_auto_pc_0_synth_1/: .vivado.begin.rst  dont_touch.xdc  gen_run.xml  rundef.js  runme.sh  system_auto_pc_0.tcl  system_auto_pc_0.vds  system_auto_pc_0_utilization_synth.rpt  vivado.jou  vivado.pb
antsdre200/antsdre200.runs/system_axi_ad9361_0_synth_1/: .vivado.begin.rst  dont_touch.xdc  gen_run.xml  rundef.js  runme.sh  system_axi_ad9361_0.tcl  system_axi_ad9361_0.vds  system_axi_ad9361_0_utilization_synth.pb  system_axi_ad9361_0_utilization_synth.rpt  vivado.jou  vivado.pb
antsdre200/antsdre200.runs/system_axi_ad9361_adc_dma_0_synth_1/: .vivado.begin.rst  dont_touch.xdc  gen_run.xml  rundef.js  runme.sh  system_axi_ad9361_adc_dma_0.dcp  system_axi_ad9361_adc_dma_0.tcl  system_axi_ad9361_adc_dma_0.vds  system_axi_ad9361_adc_dma_0_utilization_synth.pb  system_axi_ad9361_adc_dma_0_utilization_synth.rpt  vivado.jou  vivado.pb
antsdre200/antsdre200.runs/system_axi_gpreg_0_synth_1/: dont_touch.xdc  (+11 more)
antsdre200/antsdre200.sdk/: .analytics  system_top.xsa
app/: .env  client.py  main.py  server.py
app/src/: client.py  server.py  te.py  uh.py
app/src/c/: CMakeLists.txt  examp.c  main.c  test.c
c/: CMakeLists.txt
c/include/: utils.h
c/src/: spectrum_client.c
core/: CMakeLists.txt
core/.cache/clangd/index/: cJSON.c.523A59D8A2B8B480.idx  cJSON.h.F4DFFAB8140C3355.idx  cJSON_Utils.c.A526D51CB5957BC2.idx  cJSON_Utils.h.00F9E595BD467425.idx  spectrum_client.c.510599F807C2A70B.idx  utils.h.4B31FE045BACA1B7.idx
core/include/: utils.h
core/src/: cJSON.c  main.c  spectrum_client.c
env/: pyvenv.cfg
(+560 files in other folders)
